kube/electroncash-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: electroncash
  namespace: default
spec:
  ports:
    - port: 89
      targetPort: 80
  selector:
    service: electroncash
  type: NodePort
